--- a/src/Post.css
+++ b/src/Post.css
@@ -1,4 +1,4 @@
-.post{
+.post {
     background-color: white;
     max-width: 500px;
     border: 1px solid lightgrey;
@@ -6,20 +6,39 @@
 }
 
 .post__image {
-    width: 100%; 
+    width: 100%;
     object-fit: contain;
+
     border-top: 1px solid lightgrey;
     border-bottom: 1px solid lightgrey;
 }
-.post__text{
+
+.post__text {
     font-weight: normal;
     padding: 20px;
 }
-.post__header{
+
+.post__header {
     display: flex;
     align-items: center;
     padding: 20px;
 }
-.post__avatar{
-    margin-right: 10px; 
+
+.post__avatar {
+    margin-right: 10px;
+}
+
+.post__img-hover-zoom {
+    height: 300px;
+    /* [1.1] Set it as per your need */
+    overflow: hidden;
+    /* [1.2] Hide the overflowing of child elements */
+}
+
+.post__img-hover-zoom img {
+    transition: transform .5s ease;
+}
+
+.post__img-hover-zoom:hover img {
+    transform: scale(1.2);
 }
