--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,12 @@
   background-color: #fafafa;
   height: 100vh;
 }
-.app__header{
+/* .app__header{
   background-color: white;
   padding: 20px;
   border-bottom: 1px solid lightgray;
   object-fit: contain;
-}
+} */
 .app__signup{
   display: flex;
   flex-direction: column;
