--- a/src/components/Card/PostCard.css
+++ b/src/components/Card/PostCard.css
@@ -1,8 +1,9 @@
 .postcard__card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 25%;
+    
     /* max-width: 300px; */
-    margin: auto;
+    margin: 10px auto;
     text-align: center;
     font-family: arial;
 }
