--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,9 +4,11 @@
     background-color: white;
     padding: 20px;
     border-bottom: 1px solid lightgray;
-    /* object-fit: contain; */
+    object-fit: contain;
   }
 
+
+  
 .header__logo{
     margin: 0 auto;
 
