--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -7,7 +7,9 @@
 }
 
 .post__image {
-    width: 100%;
+    /* width: 100%; */
+    max-height: 300px;
+
     object-fit: contain;
 
     border-top: 1px solid lightgrey;
