--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,8 @@
 
 .app__postcard__container {
   display: flex;
+  align-items: center;
+  justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
 }
@@ -58,6 +60,14 @@
 /* .tabs__post{
   max-width: 33%;
 } */
-/* @media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
+  .tabs__container {
+    /* max-width: 600px; */
+    /* width: 90%; */
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* background-color: black; */
+    /* color: white; */
+  }
 
-} */
+}
