--- a/src/components/Card/PostCard.css
+++ b/src/components/Card/PostCard.css
@@ -1,16 +1,16 @@
 .postcard__card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 25%;
+    max-width: 20%;
+
     
     /* max-width: 300px; */
-    margin: 10px auto;
+    margin: 10px;
     text-align: center;
     font-family: arial;
 }
 
 .postcard__img {
-    /* width: 100%; */
-    max-height: 200px;
+    width: 100%;
     object-fit: contain;
     background-position: center;
 }
