--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -72,3 +72,15 @@
 .post__danger{
     color: red;
 }
+
+@media only screen and (max-width: 600px) {
+    .post {
+        align-items: center;
+
+        width: 100%;
+    }
+    .post__image {
+        width: 100%;
+    }
+
+}
