--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,8 @@ body {
 
 
 .app__intro {
-  color:#fff;
-  background-color: rgba(0,0,0,.2);
+  color: #fff;
+  background-color: rgba(0, 0, 0, .2);
 
   box-sizing: border-box;
   min-height: 10vh;
@@ -59,7 +59,7 @@ body {
 }
 
 .app__intro::before {
-  color:#000;
+  color: #000;
   position: absolute;
   bottom: 0;
   content: "Try It";
@@ -74,6 +74,7 @@ body {
   z-index: -1;
   height: 70vh
 }
+
 /* 
 .app__intro * {
   font-weight: normal;
@@ -84,7 +85,7 @@ body {
 } */
 
 .app__intro p {
-  background-color: rgba(0,0,0,.2)
+  background-color: rgba(0, 0, 0, .2)
 }
 
 .app__main {
@@ -146,7 +147,7 @@ style instaCards */
     padding: 50%;
 
     min-height: 10vh;
-  
+
   }
-  
+
 }
