--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 html {
   height: 100%;
   overflow: hidden;
+  scroll-snap-type: y mandatory;
 }
 
 body {
@@ -16,13 +17,14 @@ body {
   transform-style: preserve-3d;
   height: 100%;
   overflow-y: scroll;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
   background: #fff;
   text-align: center;
 }
 
 .app {
-  margin: 0 auto;
+  display: grid;
+    place-items: center;
   max-width: 960px;
   /* background-color: #fafafa; */
 }
@@ -75,14 +77,7 @@ body {
   height: 70vh
 }
 
-/* 
-.app__intro * {
-  font-weight: normal;
-  letter-spacing: 0.2em;
-  text-align: center;
-  margin: 0;
-  padding: 1em 0;
-} */
+
 
 .app__intro p {
   background-color: rgba(0, 0, 0, .2)
@@ -110,18 +105,31 @@ body {
 
 .tabs__container {
   max-width: 960px;
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* background-color: black; */
-  /* color: white; */
 }
 
 .tabs__posts_container {
-  display: flex;
+  position: relative;
+  height: 800px;
+  overflow: scroll;
+  width: 80%;
+  min-width: 500px;
+  scroll-snap-type: y mandatory;
+
+/*  display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-between;*/
 
 }
+/* hide scrollbar from Chrome, Safari and Opera */
+.tabs__posts_container::-webkit-scrollbar{
+  display: hidden;
+}
+/* hide scrollbar from IE, EDGE and Firefox */
+.tabs__posts_container{
+  -ms-overflow-style: none; /*IE EDGE */
+  scrollbar-width: none; /*Firefox */
+}
+
 
 .tabs__post__instagram_embded {
   max-width: 340px;
