--- a/src/components/Main/VideoPost/Video.css
+++ b/src/components/Main/VideoPost/Video.css
@@ -1,15 +1,16 @@
 .video {
+    /* display: flex; */
     position: relative;
     border: 1px solid white;
     /* height: 500px; */
-    width: 100%;
-    height: 40%;
+    width: 25%;
+    max-height: 250px;
     scroll-snap-align: start;
 
 }
 
 .video__player {
-    /* object-fit: fill; */
+    object-fit: fill;
     /* height: 100%; */
     object-fit: cover;
     width: 100%;
@@ -17,10 +18,27 @@
 
 }
 
-.video__open{
-    height: 100vw;
+.video__open {
+    /* position: absolute; */
+    /* height: 80vh;
+    width: auto; */
 }
 
-.video__p_open{
-    height: 100vw;
+.video__p_open {
+    /* height: 80vh; */
+}
+
+@media only screen and (max-width: 600px) {
+    .video {
+        position: relative;
+        border: 1px solid white;
+        /* height: 500px; */
+        width: 100%;
+        height: 300px;
+        scroll-snap-align: start;
+
+    }
+
+
+
 }
