--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,9 @@ html {
   max-width: 960px;
 
 }
-.app{
-  
-}
+
+.app {}
+
 .app__header {
   position: relative;
   color: #000;
@@ -56,24 +56,27 @@ html {
 
 .app__footer {
   position: sticky;
+  text-align: center;
   z-index: 3;
   bottom: 0;
   margin: 0 auto;
+  background-color: honeydew;
 }
 
 @media only screen and (max-width: 600px) {
   .app__main {
     overflow: scroll;
-    display: inline-block;
+    display: grid;
+    place-items: center;
+    width: 100%;
 
-    min-width: 500px;
 
   }
 
-  .app__intro {
+  /* .app__intro {
     padding: 50%;
     min-height: 10vh;
 
-  }
+  } */
 
 }
