--- a/src/components/Main/VideoPost/Video.css
+++ b/src/components/Main/VideoPost/Video.css
@@ -19,8 +19,8 @@
 }
 
 .video__open {
-    /* position: absolute; */
     height: 100%;
+    max-height: 90vh;
     width: auto;
 }
 .video__footer{
