--- a/src/App.css
+++ b/src/App.css
@@ -4,20 +4,20 @@
 }
 
 html {
-  height: 100%;
+  /* height: 100%; */
   overflow: hidden;
   scroll-snap-type: y mandatory;
   max-width: 960px;
 
 }
 
-.app {}
+.app {
+  overflow: scroll;
+}
 
 .app__header {
   position: relative;
   color: #000;
-  /* position: sticky;
-  z-index: 2; */
   top: 0
 }
 
@@ -27,15 +27,11 @@ html {
 }
 
 .app__main {
-  /* display: grid;
-  place-items: center; */
-  display: flex;
-  position: relative;
-  height: 800px;
+  display: grid;
+  place-items: center;
   overflow: scroll;
-  width: 80%;
-  min-width: 500px;
   scroll-snap-type: y mandatory;
+  /* margin-bottom: 100px; */
 
 }
 
@@ -52,26 +48,22 @@ html {
   scrollbar-width: none;
   /*Firefox */
 }
-
-
+.app__main_video{
+  height: 90vh;
+}
 .app__footer {
   position: sticky;
-  text-align: center;
   z-index: 3;
-  bottom: 0;
-  margin: 0 auto;
   background-color: honeydew;
 }
 
 @media only screen and (max-width: 600px) {
-  .app__main {
+  /* .app__main {
     overflow: scroll;
     display: grid;
     place-items: center;
     width: 100%;
-
-
-  }
+  } */
 
   /* .app__intro {
     padding: 50%;
