--- a/src/components/Main/VideoPost/Video.css
+++ b/src/components/Main/VideoPost/Video.css
@@ -1,27 +1,20 @@
 .video {
-    /* display: flex; */
     position: relative;
     border: 1px solid white;
     height: 250px;
-    /* width: 25%; */
-    /* max-height: 250px; */
     scroll-snap-align: start;
 
 }
 
 .video__player {
-    object-fit: fill;
-    /* height: 100%; */
     object-fit: cover;
     width: 100%;
-    /* height: 100%; */
-
 }
 
 .video__open {
     height: 100%;
     max-height: 90vh;
-    width: auto;
+    object-fit: cover;
 }
 .video__footer{
     position: absolute;
@@ -33,16 +26,5 @@
 }
 
 @media only screen and (max-width: 600px) {
-    .video {
-        position: relative;
-        /* border: 1px solid white; */
-        /* height: 500px; */
-        /* width: 100%; */
-        /* height: 300px; */
-        scroll-snap-align: start;
-
-    }
-
-
 
 }
