--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,21 +1,18 @@
-.header__container{
-  /* display: grid;
-  place-items: center; */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: white;
-    /* padding: 20px; */
-    border-bottom: 1px solid lightgray;
-    max-width: 960px;
-    /* object-fit: contain; */
-
-  }
-
-
-  
-.header__logo{
-    margin: 0 auto;
+.header__container {
+  display: flex;
+  /* width: 100%; */
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  border-bottom: 1px solid lightgray;
+  max-width: 960px;
+  /* object-fit: contain; */
 
 }
 
+
+
+.header__logo {
+  text-align: center;
+  flex: 1;
+}
