--- a/src/App.css
+++ b/src/App.css
@@ -57,10 +57,18 @@ html {
   height: 90vh;
 }
 
-.app__footer h3{
-  flex-shrink: 0;
+.app__footer {
+  bottom: 70px;
+  position: sticky;
+  z-index: 3;
 
 }
+
+.app__footer h3 {
+  color: white;
+  background-color: black;
+}
+
 
 @media only screen and (max-width: 600px) {
   /* .app__main {
