--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,8 @@ html {
 
 .app__header {
 
-  background-color: rgba(255, 255, 255, .2);
+  /* background-color: rgba(255, 255, 255, .2); */
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,250,255,0) 100%);
   position: fixed;
   z-index: 1;
   top: 0;
