--- a/src/App.css
+++ b/src/App.css
@@ -63,13 +63,13 @@ html {
   /* height: 30%; */
 
 }
-
+/* 
 .app__footer {
   bottom: 70px;
   position: sticky;
   z-index: 3;
 
-}
+} */
 
 .app__footer h3 {
   color: white;
