--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ html {
 .app__header {
 
   /* background-color: rgba(255, 255, 255, .2); */
-  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,250,255,0) 100%);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 250, 255, 0) 100%);
   position: fixed;
   z-index: 1;
   top: 0;
@@ -51,7 +51,7 @@ html {
 
 /* hide scrollbar from IE, EDGE and Firefox */
 .app__main {
-
+  /* height: 90vh; */
   -ms-overflow-style: none;
   /*IE EDGE */
   scrollbar-width: none;
@@ -59,23 +59,23 @@ html {
 }
 
 .app__main_video {
-  height: 100vh;
-  /* height: 30%; */
+  height: 90vh;
+  /* height: 150px; */
 
 }
-/* 
+
 .app__footer {
-  bottom: 70px;
   position: sticky;
+  bottom: 100px;
   z-index: 3;
 
-} */
-
-.app__footer h3 {
-  color: white;
-  background-color: black;
 }
 
+.app__contacts {
+  color: red;
+  display: flex;
+  list-style: none;
+}
 
 @media only screen and (max-width: 600px) {
   /* .app__main {
