test of the footer

--- a/src/App.css
+++ b/src/App.css
@@ -34,13 +34,12 @@ html {
 }
 
 .app__main {
-  /* flex-grow: 1; */
   width: 100%;
+  height: 95vh;
   display: flex;
   flex-direction: column;
   overflow: scroll;
   scroll-snap-type: y mandatory;
-  /* margin-bottom: 100px; */
 
 }
 
@@ -59,9 +58,7 @@ html {
 }
 
 .app__main_video {
-  height: 90vh;
-  /* height: 150px; */
-
+  height: 100px;
 }
 
 .app__footer {
@@ -78,17 +75,6 @@ html {
 }
 
 @media only screen and (max-width: 600px) {
-  /* .app__main {
-    overflow: scroll;
-    display: grid;
-    place-items: center;
-    width: 100%;
-  } */
 
-  /* .app__intro {
-    padding: 50%;
-    min-height: 10vh;
-
-  } */
 
 }
