--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ html {
   overflow: scroll;
   display: flex;
   flex-direction: column;
+  background-color: rgb(63, 62, 62);
+
 }
 
 .app__header {
@@ -41,6 +43,7 @@ html {
   overflow: scroll;
   scroll-snap-type: y mandatory;
 
+
 }
 
 /* hide scrollbar from Chrome, Safari and Opera */
@@ -50,15 +53,10 @@ html {
 
 /* hide scrollbar from IE, EDGE and Firefox */
 .app__main {
-  /* height: 90vh; */
   -ms-overflow-style: none;
   /*IE EDGE */
   scrollbar-width: none;
   /*Firefox */
-}
-
-.app__main_video {
-  height: 100px;
 }
 
 .app__footer {
@@ -68,11 +66,23 @@ html {
 
 }
 
-.app__contacts {
+.app__contacts{
+  bottom: 20px;
+
+}
+.app__contacts ul{
+  padding: 0;
+  /* bottom: 44px; */
+  display: flex;
   color: red;
   display: flex;
   list-style: none;
 }
+.app__contacts li{
+  margin: 0 10px;
+}
+
+
 
 @media only screen and (max-width: 600px) {
 
