--- a/src/components/Main/Video.css
+++ b/src/components/Main/Video.css
@@ -1,11 +1,7 @@
-/* .video video {
-    position: relative;
-    max-height: 300px;
-    scroll-snap-align: start;
-    object-fit: cover;
-    width: 100%;
-} */
+.video{
+    max-width: 640px;
 
+}
 .video__player {
     position: relative;
     margin: 0 auto;
@@ -16,7 +12,7 @@
 
 }
 
-.video__player__text{
+.video__player__text {
     color: black;
     background-color: rgba(255, 255, 255, .7);
     /* border-radius: 50%; */
@@ -26,6 +22,7 @@
     bottom: 120px;
     z-index: 0;
 }
+
 .video__player video {
     height: 100%;
     width: 100%;
@@ -42,7 +39,6 @@
     height: 100vh;
     z-index: 4;
     width: 100%;
-    /* max-width: 720px; */
     object-fit: cover;
 }
 
