comments done. counter to do

--- a/src/components/Main/VideoFooter.css
+++ b/src/components/Main/VideoFooter.css
@@ -9,8 +9,14 @@
     flex: 1;
 }
 
-.videoFooter__Buttons {
+.videoFooter__Buttons__container {
+    display: flex;
     text-align: center;
     padding: 5px 30px;
+
+}
+
+.videoFooter__btn {
+    margin: 0 10px;
 
 }
