--- a/src/components/Main/VideoFooter.css
+++ b/src/components/Main/VideoFooter.css
@@ -8,6 +8,11 @@
     padding: 10px;
     flex: 1;
 }
+.videoFooter__text > a{
+    text-decoration: none;
+    color: white
+
+}
 
 .videoFooter__Buttons__container {
     display: flex;
